# pytouchlinesl

./: .gitignore  README.md  pyproject.toml
.github/: tag-release.sh
.github/workflows/: _test.yaml  publish.yaml  test.yaml
pytouchlinesl/: __init__.py  module.py  touchlinesl.py  zone.py
pytouchlinesl/client/: __init__.py  base.py  client.py
pytouchlinesl/client/models/: __init__.py  models.py
tests/: __init__.py  conftest.py  fake_client.py  test_module.py  test_touchlinesl.py  test_zone.py
tests/sample-data/: module.json  modules.json
